--- a/webroot/index.html
+++ b/webroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data slab</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../webroot/css/index.css">
 </head>
 <body>
     <header>
